[project]
name = "rdir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==1.13.1",
    "torchvision==0.14.1",
    "pytorch-lightning==1.7.7",
    "torchmetrics==0.11.4",
    "hydra-core>=1.1.0",
    "hydra-colorlog>=1.1.0",
    "wandb",
    "rich",
    "coolname",
    "tensorboardX>=2.0",
    "scikit-image==0.19.2",
    "matplotlib",
    "tqdm",
    "easydict==1.9",
    "pillow==9.1.0",
    "opencv_python==4.5.5.64",
    "pycocotools",
    "pyro-ppl==1.8.0",
    "numpy<2",
    "dvc[s3]>=3.59.1",
    "awscli",
    "albumentations==1.3.1",
]
